Initial commit – Modular GHHomegoods app

--- a/index.html
+++ b/index.html
@@ -266,7 +266,13 @@
                         <h3>Storage & Organization</h3>
                         <p>Browse our storage & organization products</p>
                     </div>
+                     <div class="category-card" onclick="showShop('back-to-school')">
+                        <span class="category-icon">🎒</span>
+                        <h3>Back to School</h3>
+                        <p>Browse our back to school products</p>
+                    </div>
                 </div>
+                
                 
                 <h2 class="section-title">Featured Products</h2>
                 <div class="product-grid" id="featuredProducts">
@@ -312,6 +318,7 @@
                             <button class="filter-btn" data-filter="cleaning-household">Cleaning</button>
                             <button class="filter-btn" data-filter="personal-care">Personal Care</button>
                             <button class="filter-btn" data-filter="storage-organization">Storage</button>
+                            <button class="filter-btn" data-filter="back-to-school">Back to School</button> 
                         </div>
                     </div>
                     <div class="search-results" id="searchResults">Showing all products</div>
